bug 66781 Resources for the new printing UI.  r=peterlubczynski sr=sfraser